--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <title>Chronicle</title>
+  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Tourney:ital,wght@0,100..900;1,100..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
     <link href="css/styles.css" type="text/css" rel="stylesheet">
@@ -29,11 +29,11 @@
         <h1 class="about-me">Chronicle</h1>
         <section class="about-info">
             <div class ="about-image">
-                <img src="images/h4oyc8qr.png" alt="angel" class="dnd-character">
+                <img src="images/bargabe.jpg" alt="angel" class="dnd-character">
             </div>
             
         <div class="about-text">
-                <h2 class="prologue">Prologue</h2>
+                <h2 class="prologue">My Journey to Tech</h2>
                 <p class="orbitron-text">Hi! I'm Gabriel—a web development student with a story shaped by resilience, curiosity, and a deep desire to build something meaningful.</p>
                 <p class="orbitron-text">My journey into tech began thanks to a generous friend, who gifted me a Python course on Udemy.
                 That single act opened the door to a new world—far removed from the labor jobs I'd worked for years. My friend didn't just hand me the keys; he stuck around to help me through the tough parts, and I'll always be grateful.</p>
@@ -42,9 +42,9 @@
         </section>
 
 <section id="skills">
-<div class="list-2">
+  <div class="list-2">
   <div class="container-2">
-    <h2>🎓Education</h2>
+    <h2>🎓Education & Credentials</h2>
     <ul class="list">
       <li>🏫 High School Diploma</li>
       <li>🛠️ CNC Certification</li>
@@ -55,8 +55,9 @@
       <li>📚 Ongoing self-study via Udemy, freeCodeCamp, and other platforms</li>
     </ul>
   </div>
+  
   <div class="container-2">
-    <h2>🏆Accomplishments &<br> Achievements</h2>
+    <h2>🏆Discipline & Milestones</h2>
     <ul class="list">
       <li>🥋 Earned a 2nd Degree Black Belt</li>
       <li>🏡 Became a homeowner</li>
@@ -64,11 +65,11 @@
       <li>💪 Lost 70 pounds—twice</li>
       <li>✈️ Traveled to Japan</li>
       <li>🦵 Recovered from knee surgery</li>
-      <li>🎃 Born dead—but I came back fighting</li>
+      <li>⚰️ Born dead—but I came back fighting</li>
     </ul>
   </div>
   <div class="container-2">
-    <h2>👨‍💻Technical Skills</h2>
+    <h2>👨‍💻Hard Skills & Tools</h2>
     <ul class="list">
       <li>🧾HTML5 Semantic Tags</li>
       <li>🎨CSS Flexbox</li>
@@ -80,7 +81,7 @@
     </ul>
   </div>
   <div class="container-2">
-    <h2>🧠Cognitive &<br> Analytical Skills</h2>
+    <h2>🧠Analytical Strengths</h2>
     <ul class="list">
       <li>🧩Problem-solving & perseverance</li>
       <li>🔍Thinking and research</li>
@@ -91,7 +92,7 @@
     </ul>
   </div>
   <div class="container-2">
-    <h2>👥Communication &<br> Collaboration Skills</h2>
+    <h2>👥Collaboration & Comms</h2>
     <ul class="list">
       <li>🤝Team collaboration</li>
       <li>🗣️Well spoken and articulate</li>
@@ -104,7 +105,7 @@
     </ul>
   </div>
   <div class="container-2">
-    <h2>🏋️Personal Growth Skills</h2>
+    <h2>🏋️Drive & Adaptability</h2>
     <ul class="list">
       <li>📚Willingness to learn</li>
       <li>⚡Quick learner</li>
@@ -114,7 +115,7 @@
     </ul>
   </div>
   <div class="container-2">
-    <h2>⏱️Organization &<br> Productivity Skills</h2>
+    <h2>⏱️Productivity & Focus</h2>
     <ul class="list">
       <li>⏳Time management</li>
       <li>🔀Multi-tasking</li>
@@ -125,7 +126,7 @@
     </ul>
   </div>
   <div class="container-2">
-    <h2>👨Character &<br> Interpersonal Skills</h2>
+    <h2>👨Character & Leadership</h2>
     <ul class="list">
       <li>👑Leadership</li>
       <li>🧭Ethical</li>
@@ -140,6 +141,7 @@
 </section>
 
 <div class="container">
+  <section id="#hobbies.html">
   <h2>🎮Passions & Hobbies</h2>
   <h3 class="orbitron-text">When I’m not coding, I’m immersed in worlds of imagination and strategy. I love:</h3>
   <ul class="list">
@@ -149,10 +151,11 @@
     <li>📺Watching Vtubers and Streamers</li>
     <li>These hobbies fuel my creativity and help me think outside the box—skills I bring into every project</li>
   </ul>
+  </section>
 </div>
 
 <div class="container">
-  <h2>🎯Career Goals</h2>
+  <h2>🎯Career Trajectory</h2>
   <ul class="list">
     <li>🧱Build a strong foundation in full-stack development</li>
     <li>🌍Contribute to open-source projects</li>
@@ -163,9 +166,9 @@
 </div>
 
 <div class="container">
-  <h2>🏡Personal Plans</h2>
+  <h2>🏡Personal<br>Development</h2>
   <h3 class="orbitron-text">
-    <br>🎸Learning Bass Guitar<br>Music has always been a source of energy and emotion<br>Picking up the bass is my next creative challenge,<br>one that blends rhythm, discipline, and expression.<br><br>
+    🎸Learning Bass Guitar<br>Music has always been a source of energy and emotion<br>Picking up the bass is my next creative challenge,<br>one that blends rhythm, discipline, and expression.<br><br>
     🏋️Getting Back to the Gym<br>After recovering from knee surgery and conquering weight loss twice,<br>I’m ready to return to the gym with renewed focus.<br> Strength, mobility, and health are key pillars of my journey forward.<br><br>
     🖥️Building My Dream Gaming Setup<br>I’m planning to build a custom gaming PC setup,<br>complete with a sleek desk, ergonomic chair, and ambient lighting<br>It’s more than just a setup—it’s a space where creativity, relaxation, and inspiration collide.
   </h3>
