--- a/about.html
+++ b/about.html
@@ -26,10 +26,10 @@
     </header>  
   
     <main>
-        <h1 class="about-me">Chronicle</h1>
+        
         <section class="about-info">
             <div class ="about-image">
-                <img src="images/bargabe.jpg" alt="angel" class="dnd-character">
+                <img src="images/islandgabe.jpg" alt="angel" class="dnd-character">
             </div>
             
         <div class="about-text">
