--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
         
     <div class="container">
         <section id="about">
+            
             <h2 class="about-me">Back story</h2>
                 <div class="personal">
-                <img src="images/islandgabe.jpg" alt="my-face" class="profile-pic">
+                <img src="images/bargabe.jpg" alt="my-face" class="profile-pic">
                 <h3 class="bio"><br>My name is Gabriel, after working in retail for years I learned Python from UDEMY and found not only a vaulble skill but also a new avenue into the IT FIeld, which is consistently growing and expanding. I've worked as a BlackJack Dealer but starting my career in Web Development is my biggest gamble. Just like my name, have faith in my abilities and my work will be Divine. Read my full bio 
                 </h3> 
             </div>
